--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,7 @@
     <string name="message">Message</string>
     <string name="send">Send</string>
     <string name="default_port">3000</string>
-    <string name="default_ip">192.168.0.102</string>
+    <string name="default_ip">192.168.0.138</string>
+    <string name="username">username</string>
+    <string name="server_address">Server Address</string>
 </resources>
